# aha

./: .gitignore  Makefile  README.md  __init__.py  aha.py  analysis.py  make-multiple-choice.py  multiple_choice_dataset.json  pyproject.toml  results_summary.py  results_summary_raw.py  tag_analysis.py
aha/: __init__.py  csv_dataset.py  scoring.py  task.py  types.py  utils.py
aha2/: Makefile  README.md  pyproject.toml
aha2/data/: dimensions.csv  questions.csv
aha2/scripts/: convert_to_hf.py
aha2/src/: colab_utils.py  dataset.py  metrics.py  radar_plot.py  samples.py  samples_hf.py  scorer.py  task.py  types.py  utils.py
analysis_scripts/: combine_results.py  pairwise_comparison.py  results_summary.py  results_summary_raw.py  tag_analysis.py
config/: dimensions.csv  questions.csv
scripts/: convert_to_hf.py
src/: colab_utils.py  utils.py
tests/: test_scoring.py  test_task.py
