[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aha2"
version = "0.1.0"
description = "Animal Harm Assessment (AHA) benchmark task for the Inspect framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    "inspect-ai>=0.3.96",
    "pandas",
    "openai>=1.78.0",
    "scikit-learn",
    "scipy",
    "krippendorff",
    "tabulate",
    "matplotlib",
    "pydantic>=2.0",
    "numpy>=2.2.5",
    "anthropic>=0.51.0",
    "google-genai>=1.14.0",
    "google-generativeai>=0.8.5",
]

[project.urls]
"Homepage" = "https://github.com/AI-for-Animals/aha"

[tool.setuptools]
packages = ["src"]
package-dir = {"aha2" = "src"}
